// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addon a11y Default 1`] = `
<button
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  
</button>
`;

exports[`Storyshots Addon a11y Disabled 1`] = `
<button
  disabled={true}
  onClick={[Function]}
  style={Object {}}
>
  Testing the a11y addon
</button>
`;

exports[`Storyshots Addon a11y Invalid contrast 1`] = `
<button
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "black",
      "color": "black",
    }
  }
>
  Testing the a11y addon
</button>
`;

exports[`Storyshots Addon a11y Label 1`] = `
<button
  disabled={false}
  onClick={[Function]}
  style={Object {}}
>
  Testing the a11y addon
</button>
`;
